# slurm-usage-report-rs

./: .gitignore  Cargo.toml  TODO.md  build-linux-old.sh  daily_eff.sh  generated_files.dot  input_sizes.csv  slurm-usage-report-rs
assets/: sacct.csv
assets/templates/: aggregated_efficiency.html.j2  daily_efficiency.html.j2  snakemake_report_template.html.j2  snakemake_report_template_with_tabs.html.j2  snakemake_report_template_without_tabs.html.j2
assets/templates/macros/: charts.html.j2
assets/tests/: expected_template.html
src/: daily_efficiency.rs  error.rs  lib.rs  main.rs  parse.rs  utils.rs
src/cli/: aggregate_report.rs  auto_complete.rs  csv_to_parquet.rs  daily_efficiency_report.rs  mod.rs  post_run.rs
src/post_run/: mod.rs  sacct_get.rs  snakemake_parse_log.rs  snakemake_rules_plot.rs
src/usage_report/: aggregates.rs  columns_add.rs  conversions.rs  mod.rs
src/utils/: lazyframe_edit.rs  mod.rs  utils.rs
