[package]
name = "slurm-usage-report-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
duckdb = { version = "1.10500.0", features = [
    "parquet",
    "polars",
    "serde_json",
] }
polars = { version = "0.53.0", features = ["lazy"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
