[package]
name = "slurm-usage-report-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
csv = "1.4.0"
duckdb = { version = "1.10500.0", features = ["parquet"] }
include_dir = "0.7.4"
minijinja = "2.18.0"
plotly = "0.14.1"
polars = { version = "0.53.0", features = [
    "lazy",
    "parquet",
    "strings",
    "regex",
] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
in-place = "0.2.1"

[dev-dependencies]
tempfile = "3.15"
